--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Article The First</title>
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="favicon-512x512.png">
     <style>
         body {
             margin: 0;
