description, contact email, opengraph meta

--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Article The First</title>
+    <meta name="description" content="Coming soon to a district near you">
+    <!-- OpenGraph Meta Tags -->
+    <meta property="og:url" content="https://articlethefirst.org">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Article The First">
+    <meta property="og:description" content="Coming soon to a district near you">
+    <meta property="og:image" content="https://articlethefirst.org/favicon-512x512.png">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="articlethefirst.org">
+    <meta property="twitter:url" content="https://articlethefirst.org">
+    <meta name="twitter:title" content="Article The First">
+    <meta name="twitter:description" content="Coming soon to a district near you">
+    <meta name="twitter:image" content="https://articlethefirst.org/favicon-512x512.png">
+    <!-- Icons -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -15,18 +30,22 @@
             margin: 0;
             height: 100vh;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             background-color: black;
             font-family: Helvetica, Arial, sans-serif;
         }
-        h1 {
+        h1, h2, a {
             color: white;
             text-transform: lowercase;
+            margin: 10px 0;
         }
     </style>
 </head>
 <body>
     <h1>coming soon</h1>
+    <h2>to a district near you</h2>
+    <a href= "mailto:contact@articlethefirst.org" target="_blank">contact@articlethefirst.org</a>
 </body>
 </html>
