--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <style>
         body {
             margin: 0;
-            height: 100vh;
+            padding: 0;
+            height: 100%;
+            width: 100%;
             display: flex;
             flex-direction: column;
             justify-content: center;
