--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         body {
             margin: 0;
             padding: 0;
-            height: 100vh;
-            width: 100vw;
+            height: 100dvh;
+            width: 100dvw;
             display: flex;
             flex-direction: column;
             justify-content: center;
