--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
     <link rel="icon" type="image/png" sizes="48x48" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="48x48" href="favicon-180x180.png">
     <link rel="icon" type="image/png" sizes="512x512" href="favicon-512x512.png">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
     <style>
+        .fjalla-one-regular {
+            font-family: "Fjalla One", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+        }
         body {
             margin: 0;
             padding: 0;
@@ -36,16 +45,16 @@
             justify-content: center;
             align-items: center;
             background-color: black;
-            font-family: Helvetica, Arial, sans-serif;
+            font-family: "Fjalla One";
         }
-        h1, h2, a {
+        h1, h2, a, img {
             color: white;
-            text-transform: lowercase;
             margin: 10px 0;
         }
     </style>
 </head>
 <body>
+    <img src="favicon-96x96.png" alt="Article The First Logo">
     <h1>coming soon</h1>
     <h2>to a district near you</h2>
     <a href= "mailto:contact@articlethefirst.org" target="_blank">contact@articlethefirst.org</a>
