--- a/index.html
+++ b/index.html
@@ -5,27 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Article The First</title>
     <meta name="description" content="Coming soon to a district near you">
-    <!-- OpenGraph Meta Tags -->
+    <!-- meta tags -->
     <meta property="og:url" content="https://articlethefirst.org">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Article The First">
     <meta property="og:description" content="Coming soon to a district near you">
     <meta property="og:image" content="https://articlethefirst.org/favicon-512x512.png">
-    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="articlethefirst.org">
     <meta property="twitter:url" content="https://articlethefirst.org">
     <meta name="twitter:title" content="Article The First">
     <meta name="twitter:description" content="Coming soon to a district near you">
     <meta name="twitter:image" content="https://articlethefirst.org/favicon-512x512.png">
-    <!-- Icons -->
+    <!-- icons -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="48x48" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="48x48" href="favicon-180x180.png">
     <link rel="icon" type="image/png" sizes="512x512" href="favicon-512x512.png">
-    <!-- Fonts -->
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
