use bigger logo

--- a/index.html
+++ b/index.html
@@ -50,10 +50,14 @@
             color: white;
             margin: 10px 0;
         }
+        img {
+            width: 100px;
+            height: 100px;
+        }
     </style>
 </head>
 <body>
-    <img src="favicon-96x96.png" alt="Article The First Logo">
+    <img src="favicon-512x512.png" alt="Article The First Logo">
     <h1>coming soon</h1>
     <h2>to a district near you</h2>
     <a href= "mailto:contact@articlethefirst.org" target="_blank">contact@articlethefirst.org</a>
