--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             justify-content: center;
             align-items: center;
             background-color: black;
-            font-family: "Fjalla One";
+            font-family: "Fjalla One", sans-serif;
         }
         h1, h2, a, img {
             color: white;
