--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 </head>
 <body>
     <img src="favicon-512x512.png" alt="Article The First Logo">
-    <h1>coming soon</h1>
-    <h2>to a district near you</h2>
+    <h1>Article The First</h1>
+    <h2>Coming soon to a district near you.</h2>
     <a href= "mailto:contact@articlethefirst.org" target="_blank">contact@articlethefirst.org</a>
 </body>
 </html>
