lowercase 'the' is the original name

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Article The First</title>
+    <title>Article the First</title>
     <meta name="description" content="Coming soon to a district near you">
     <!-- meta tags -->
     <meta property="og:url" content="https://articlethefirst.org">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Article The First">
+    <meta property="og:title" content="Article the First">
     <meta property="og:description" content="Coming soon to a district near you">
     <meta property="og:image" content="https://articlethefirst.org/favicon-512x512.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="articlethefirst.org">
     <meta property="twitter:url" content="https://articlethefirst.org">
-    <meta name="twitter:title" content="Article The First">
+    <meta name="twitter:title" content="Article the First">
     <meta name="twitter:description" content="Coming soon to a district near you">
     <meta name="twitter:image" content="https://articlethefirst.org/favicon-512x512.png">
     <!-- icons -->
@@ -57,8 +57,8 @@
     </style>
 </head>
 <body>
-    <img src="favicon-512x512.png" alt="Article The First Logo">
-    <h1>Article The First</h1>
+    <img src="favicon-512x512.png" alt="Article the First Logo">
+    <h1>Article the First</h1>
     <h2>Coming soon to a district near you.</h2>
     <a href= "mailto:contact@articlethefirst.org" target="_blank">contact@articlethefirst.org</a>
 </body>
