--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Article the First</title>
-    <meta name="description" content="Coming soon to a district near you">
+    <meta name="description" content="Coming soon to a district near you.">
     <!-- meta tags -->
     <meta property="og:url" content="https://articlethefirst.org">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Article the First">
-    <meta property="og:description" content="Coming soon to a district near you">
+    <meta property="og:description" content="Coming soon to a district near you.">
     <meta property="og:image" content="https://articlethefirst.org/favicon-512x512.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="articlethefirst.org">
     <meta property="twitter:url" content="https://articlethefirst.org">
     <meta name="twitter:title" content="Article the First">
-    <meta name="twitter:description" content="Coming soon to a district near you">
+    <meta name="twitter:description" content="Coming soon to a district near you.">
     <meta name="twitter:image" content="https://articlethefirst.org/favicon-512x512.png">
     <!-- icons -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
