--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             width: 25em;
             margin: 30px 0;
             border: 0;
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255, .5), rgba(0, 0, 0, 0));
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(204, 204, 204, 0.3), rgba(0, 0, 0, 0));
         }
         h1 {
             font-weight: 500;
