--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 <body>
     <h1>Article the First</h1>
     <h2>Coming soon to a district near you.</h2>
+    <p>Only 27 states left.</p>
     <hr>
     <p>Learn more and join the movement while we are under construction.</p>
     <ul>
