add robots meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Article the First</title>
     <meta name="description" content="Coming soon to a district near you.">
+    <meta name="robots" content="index, follow">
     <!-- meta tags -->
     <meta property="og:url" content="https://articlethefirst.org">
     <meta property="og:type" content="website">
