add site_name opengraph meta

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Coming soon to a district near you.">
     <meta name="robots" content="index, follow">
     <!-- meta tags -->
+    <meta property="og:site_name" content="Article the First">
     <meta property="og:url" content="https://articlethefirst.org">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Article the First">
