add more meta tags

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Article the First</title>
     <meta name="description" content="Coming soon to a district near you.">
+    <meta name="author" content="articlethefirst.org">
     <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://articlethefirst.org">
     <!-- meta tags -->
-    <meta property="og:site_name" content="Article the First">
+    <meta property="og:site_name" content="articlethefirst.org">
     <meta property="og:url" content="https://articlethefirst.org">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Article the First">
