--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Article the First</title>
-    <meta name="description" content="Coming soon to a district near you.">
+    <meta name="description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives.">
+    <meta name="keywords" content="Article the First, Congressional Apportionment Amendment, US Constitution, House of Representatives, fair representation, constitutional amendment">
     <meta name="author" content="articlethefirst.org">
-    <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://articlethefirst.org">
+    <meta name="robots" content="index, follow">
     <!-- meta tags -->
     <meta property="og:site_name" content="articlethefirst.org">
     <meta property="og:url" content="https://articlethefirst.org">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Article the First">
-    <meta property="og:description" content="Coming soon to a district near you.">
+    <meta property="og:description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives.">
     <meta property="og:image" content="https://articlethefirst.org/favicon-512x512.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="articlethefirst.org">
     <meta property="twitter:url" content="https://articlethefirst.org">
     <meta name="twitter:title" content="Article the First">
-    <meta name="twitter:description" content="Coming soon to a district near you.">
+    <meta name="twitter:description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives.">
     <meta name="twitter:image" content="https://articlethefirst.org/favicon-512x512.png">
     <!-- icons -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
