--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Article the First</title>
-    <meta name="description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives.">
-    <meta name="keywords" content="Article the First, Congressional Apportionment Amendment, US Constitution, House of Representatives, fair representation, constitutional amendment">
-    <meta name="author" content="articlethefirst.org">
-    <link rel="canonical" href="https://articlethefirst.org">
-    <meta name="robots" content="index, follow">
+    <meta name="description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives."/>
+    <meta name="keywords" content="Article the First, Congressional Apportionment Amendment, US Constitution, House of Representatives, fair representation, constitutional amendment"/>
+    <meta name="author" content="articlethefirst.org"/>
+    <link rel="canonical" href="https://articlethefirst.org"/>
+    <meta name="robots" content="index, follow"/>
     <!-- meta tags -->
-    <meta property="og:site_name" content="articlethefirst.org">
-    <meta property="og:url" content="https://articlethefirst.org">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Article the First">
-    <meta property="og:description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives.">
-    <meta property="og:image" content="https://articlethefirst.org/favicon-512x512.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="articlethefirst.org">
-    <meta property="twitter:url" content="https://articlethefirst.org">
-    <meta name="twitter:title" content="Article the First">
-    <meta name="twitter:description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives.">
-    <meta name="twitter:image" content="https://articlethefirst.org/favicon-512x512.png">
+    <meta property="og:site_name" content="articlethefirst.org"/>
+    <meta property="og:url" content="https://articlethefirst.org"/>
+    <meta property="og:type" content="website/">
+    <meta property="og:title" content="articlethefirst.org"/>
+    <meta property="og:description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives."/>
+    <meta property="og:image" content="https://articlethefirst.org/favicon-512x512.png"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@articlefirstorg"/>
+    <meta name="twitter:creator" content="@articlefirstorg" />
+    <meta name="twitter:title" content="articlethefirst.org"/>
+    <meta name="twitter:description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives."/>
+    <meta name="twitter:image" content="https://articlethefirst.org/favicon-512x512.png"/>
     <!-- icons -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="48x48" href="favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="48x48" href="favicon-180x180.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="favicon-512x512.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="48x48" href="favicon-96x96.png"/>
+    <link rel="icon" type="image/png" sizes="48x48" href="favicon-180x180.png"/>
+    <link rel="icon" type="image/png" sizes="512x512" href="favicon-512x512.png"/>
     <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"/>
     <style>
         * {
             font-family: "Fjalla One", sans-serif;
