add meta keyword

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Article the First</title>
     <meta name="description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives."/>
-    <meta name="keywords" content="Article the First, Congressional Apportionment Amendment, US Constitution, House of Representatives, fair representation, constitutional amendment"/>
+    <meta name="keywords" content="Article the First, Congressional Apportionment Amendment, US Constitution, House of Representatives, fair representation, constitutional amendment, ratification"/>
     <meta name="author" content="articlethefirst.org"/>
     <meta name="robots" content="index, follow"/>
     <link rel="canonical" href="https://articlethefirst.org"/>
