--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
             align-items: center;
             background-color: black;
         }
+        footer {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
         hr, h1, h2, p, a {
             color: white;
             margin: 10px 0;
@@ -95,7 +101,9 @@
         <li><a href="https://www.articlethefirst.net/" target="_blank">articlethefirst.net</a></li>
         <li><a href="https://www.reddit.com/r/UncapTheHouse/" target="_blank">reddit.com/r/UncapTheHouse</a></li>
     </ul>
-    <a href="https://github.com/emerconnelly/articlethefirst" target="_blank"><img id="github-logo" src="assets/github-logo-240x240.png"></a>
-    <a href="mailto:contact@articlethefirst.org" target="_blank">contact@articlethefirst.org</a>
+    <footer>
+        <a href="https://github.com/emerconnelly/articlethefirst" target="_blank"><img id="github-logo" src="assets/github-logo-240x240.png" alt="GitHub Repository"></a>
+        <a href="mailto:contact@articlethefirst.org">contact@articlethefirst.org</a>
+    </footer>
 </body>
 </html>
