add structured data script

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet"/>
+    <!-- structured data -->
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "url": "https://articlethefirst.org",
+          "logo": "https://articlethefirst.org/favicon-512x512.png",
+          "name": "articlethefirst.org",
+          "description": "Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives.",
+          "email": "contact@articlethefirst.org",
+        }
+    </script>
     <style>
         * {
             font-family: "Fjalla One", sans-serif;
