better title for previews

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <meta name="robots" content="index, follow"/>
     <link rel="canonical" href="https://articlethefirst.org"/>
     <!-- meta tags -->
-    <meta property="og:site_name" content="articlethefirst.org"/>
+    <meta property="og:site_name" content="Article the First"/>
     <meta property="og:url" content="https://articlethefirst.org"/>
     <meta property="og:type" content="website/">
-    <meta property="og:title" content="articlethefirst.org"/>
+    <meta property="og:title" content="Article the First"/>
     <meta property="og:description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives."/>
     <meta property="og:image" content="https://articlethefirst.org/favicon-512x512.png"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@articlefirstorg"/>
     <meta name="twitter:creator" content="@articlefirstorg" />
-    <meta name="twitter:title" content="articlethefirst.org"/>
+    <meta name="twitter:title" content="Article the First"/>
     <meta name="twitter:description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives."/>
     <meta name="twitter:image" content="https://articlethefirst.org/favicon-512x512.png"/>
     <!-- icons -->
