--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Article the First</title>
-    <meta name="description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives."/>
+    <meta name="description" content="Join the movement to pass Article the First, the Congressional Apportionment Amendment, for fair representation in the US House of Representatives. Only 27 states left to ratify."/>
     <meta name="keywords" content="Article the First, Congressional Apportionment Amendment, US Constitution, House of Representatives, fair representation, constitutional amendment, ratification"/>
     <meta name="author" content="articlethefirst.org"/>
     <meta name="robots" content="index, follow"/>
@@ -14,13 +14,13 @@
     <meta property="og:url" content="https://articlethefirst.org"/>
     <meta property="og:type" content="website/">
     <meta property="og:title" content="Article the First"/>
-    <meta property="og:description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives."/>
+    <meta property="og:description" content="Join the movement to pass Article the First, the Congressional Apportionment Amendment, for fair representation in the US House of Representatives. Only 27 states left to ratify."/>
     <meta property="og:image" content="https://articlethefirst.org/favicon-512x512.png"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@articlefirstorg"/>
     <meta name="twitter:creator" content="@articlefirstorg" />
     <meta name="twitter:title" content="Article the First"/>
-    <meta name="twitter:description" content="Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives."/>
+    <meta name="twitter:description" content="Join the movement to pass Article the First, the Congressional Apportionment Amendment, for fair representation in the US House of Representatives. Only 27 states left to ratify."/>
     <meta name="twitter:image" content="https://articlethefirst.org/favicon-512x512.png"/>
     <!-- icons -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
@@ -41,7 +41,7 @@
           "url": "https://articlethefirst.org",
           "logo": "https://articlethefirst.org/favicon-512x512.png",
           "name": "articlethefirst.org",
-          "description": "Learn about Article the First, the Congressional Apportionment Amendment, and join the movement to pass this important legislation for fair representation in the US House of Representatives.",
+          "description": "Join the movement to pass Article the First, the Congressional Apportionment Amendment, for fair representation in the US House of Representatives. Only 27 states left to ratify.",
           "email": "contact@articlethefirst.org",
         }
     </script>
@@ -70,6 +70,10 @@
         }
         section {
             margin: 20px 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
         img {
             height: 40px;
@@ -80,7 +84,7 @@
             width: 30em;
             max-width: 90vw;
             border: 0;
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(204, 204, 204, 0.3), rgba(0, 0, 0, 0));
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(204, 204, 204, 0.5), rgba(0, 0, 0, 0));
         }
         hr, h1, h2, h3, p, a {
             color: white;
@@ -113,7 +117,7 @@
     <hr>
     <main>
         <section>
-            <h3>Join the Movement for Fair Representation</h3>
+            <p>Join the movement to pass Article the First, the Congressional Apportionment Amendment, for fair representation in the US House of Representatives.</p>
             <p>Only 27 states left to ratify.</p>
         </section>
         <section>
