--- a/index.html
+++ b/index.html
@@ -54,26 +54,21 @@
         body {
             margin: 0;
             padding: 0;
-            height: 100dvh;
-            width: 100dvw;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            min-height: 100vh;
+            width: 100%;
             background-color: black;
         }
-        div, header, footer {
+        body, div, header, footer, section {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+        }
+        div {
+            flex-direction: row;
         }
         section {
             margin: 20px 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
         }
         img {
             height: 40px;
@@ -82,7 +77,7 @@
         hr {
             height: 2px;
             width: 30em;
-            max-width: 90vw;
+            max-width: 90%;
             border: 0;
             background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(204, 204, 204, 0.5), rgba(0, 0, 0, 0));
         }
@@ -103,9 +98,6 @@
         }
         li:first-child {
             margin-top: 0;
-        }
-        #footer-links {
-            flex-direction: row;
         }
     </style>
 </head>
@@ -133,7 +125,7 @@
         </section>
     </main>
     <footer>
-        <div id="footer-links">
+        <div>
             <a href="https://github.com/emerconnelly/articlethefirst" target="_blank"><img src="assets/github-logo-240x240.png" alt="GitHub Logo"></a>
             <a href="https://twitter.com/articlefirstorg" target="_blank"><img src="assets/twitter-logo-235x240.png" alt="Twitter Logo"></a>
         </div>
