--- a/index.html
+++ b/index.html
@@ -131,5 +131,14 @@
         </div>
         <a href="mailto:contact@articlethefirst.org">contact@articlethefirst.org</a>
     </footer>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D5NMH1DRL6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-D5NMH1DRL6');
+    </script>
 </body>
 </html>
